Apply more automatic refactorings